tests/baselines/reference/mergedInterfacesWithConflictingPropertyNames2.errors.txt
mergedInterfacesWithConflictingPropertyNames2.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergedInterfacesWithConflictingPropertyNames2.ts(19,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergedInterfacesWithConflictingPropertyNames2.ts(25,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergedInterfacesWithConflictingPropertyNames2.ts(31,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergedInterfacesWithConflictingPropertyNames2.ts(37,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== mergedInterfacesWithConflictingPropertyNames2.ts (5 errors) ====
    interface A {
        x: string; // error
    }
    
    interface A {
        x: string; // error
    }
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface A<T> {
            x: T;
        }
    
        interface A<T> {
            x: T;  // error
        }
    }
    
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface A<T> {
            x: T;
        }   
    }
    
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface A<T> {
            x: T;  // ok, different declaration space than other M2
        }
    }
    
    module M3 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface A<T> {
            x: T;
        }
    }
    
    module M3 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface A<T> {
            x: T;  // error
        }
    }